setup_project_2/cluster/modules/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: default

spec:
  gatewayClassName: alb

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443

      allowedRoutes:
        namespaces:
          from: All
